# tree-sitter-chuck

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Justfile  Makefile  Package.swift  README.md  binding.gyp  chuck.dylib  config.json  example.ck  foo.ck  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.ck  tree-sitter.json
.helix/: languages.toml
bindings/c/: tree-sitter-chuck.pc.in
bindings/c/tree_sitter/: tree-sitter-chuck.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chuck/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterChuckTests/: TreeSitterChuckTests.swift
examples/: chant.ck  example.ck  listing-1-1.ck  listing-1-2.ck  listing-1-3.ck
just/: chuck.just  tree-sitter-chuck.just
nix/: chuck.nix
queries/: highlights.scm
scripts/: environment.nu
scripts/chuck/: help.nu
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  complex-types.txt  debug-print.txt  primitive-types.txt  reference-types.txt  reserved-words.txt  values.txt  variables.txt
test/corpus/arrays/: array-assignment.txt  associative-arrays.txt  declaration.txt  lookup-and-looping.txt  multi-dimensional-arrays.txt
test/corpus/classes-and-objects/: built-in-classes.txt  inheritance.txt  learning-about-objects-with-help.txt  members.txt  static.txt  working-with-objects.txt  writing-a-custom-class.txt
test/corpus/concurrency-processes-shreds/: command-line-arguments.txt  (+3 more)
(+50 files in other folders)
